--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NLW Esports</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <img
+          src="https://github.com/sheilasantosdev.png"
+          alt="Foto de Sheila dos Santos"
+        />
+      </div>
+    </header>
+
+  </body>
 </html>
