section jogos ok

--- a/index.html
+++ b/index.html
@@ -15,5 +15,52 @@
       </div>
     </header>
 
+    <main>
+      <section>
+        <div>
+          <h2>Meus jogos</h2>
+          <p>Os games que eu mais curto jogar!</p>
+
+          <ul class="games-list">
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/Alice%3A%20Madness%20Returns"
+              >
+                <img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/22959_IGDB-90x120.jpg"
+                  alt="Imagem do jogo Alice Madness Returns"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/The%20Legend%20of%20Zelda%3A%20Ocarina%20of%20Time"
+              >
+                <img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/11557_IGDB-90x120.jpg"
+                  alt="Imagem do jogo Zelda"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a
+                target="_blank"
+                href="https://www.twitch.tv/directory/game/Detroit%3A%20Become%20Human"
+              >
+                <img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/497480_IGDB-90x120.jpg"
+                  alt="Imagem do jogo Detroit Become Human"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
