section canais ok

--- a/index.html
+++ b/index.html
@@ -61,6 +61,51 @@
         </div>
       </section>
 
+      <section>
+        <div>
+          <h2>Canais e Streamers</h2>
+          <p>Lista de canais e transmissões que não perco!</p>
+
+          <ul class="channel-list">
+            <li>
+              <a target="_blank" href="https://www.twitch.tv/relaxbeats">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/relaxbeats-profile_image-76acee755ecb616f-150x150.jpeg"
+                  alt="Imagem do canal Relax Beats"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a target="_blank" href="https://www.twitch.tv/netflix">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/955cd85f-9dea-4898-b66a-c83051bf2706-profile_image-150x150.png"
+                  alt="Imagem do canal Netflix"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a target="_blank" href="https://www.twitch.tv/anni_quinn_">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/02d1f2d2-25b3-47b1-9f81-789662ab4b4b-profile_image-150x150.png"
+                  alt="Imagem de Anni"
+                />
+              </a>
+            </li>
+
+            <li>
+              <a target="_blank" href="https://www.twitch.tv/laserbelch">
+                <img
+                  src="https://static-cdn.jtvnw.net/jtv_user_pictures/97dd5266-9e49-4934-a6cb-0c2d92cda0e2-profile_image-150x150.png"
+                  alt="Imagem de Laser"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
